--- a/assets/sass/_variable.scss
+++ b/assets/sass/_variable.scss
@@ -1,4 +1,4 @@
 $primary-color:#FCA033;
 $secondary-color:#0495FE;
 $primary-font:'Public Sans';
-$secondary-font:'Inter 18pt';
+$secondary-font:'Jost';
