--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,5 +1,6 @@
 @use './variable' as var; 
 @use './font';
+@use './common';
 
 *{
     margin:0;
@@ -14,5 +15,156 @@ header{
     .topbar{
         background-color:var.$primary-color;
         padding:10px;
+    }
+    .dropdown-menu[data-bs-popper]{
+        right:0 !important;
+        left:auto;
+    }
+    .navbar{
+        .logo{
+            .navbar-brand{
+                &>img{
+                    width:130px;
+                }
+            }
+        }
+        .navbar-nav{
+            .nav-item{
+                .nav-link{
+                    &.active{
+                        color:var.$secondary-color;
+                        font-weight:600;
+                    }
+                }
+            }
+        }
+    }
+}
+main{
+    .main-section{
+        .Headings{
+            padding:60px;
+            margin:0 auto;
+            padding-bottom:17px;
+            text-align:center;
+            &>h1{
+                color:grey;
+                font-family:var.$secondary-font;
+                text-transform:uppercase;
+                font-weight:600;
+                line-height:50px;
+                letter-spacing:1px;
+                .first{
+                    color:var.$primary-color;
+                }
+                .second{
+                    color:var.$secondary-color;
+                }
+            }
+            .icon{
+                color:var.$secondary-color;
+                font-size:25px;
+            }
+        }
+        .search-card{
+            max-width:800px;
+            margin:0 auto;
+            position: relative;
+            .form-control{
+                border-radius:20px;
+                height:44px;
+                padding: 0px 67px;
+                font-size:14px;
+                color:#ddd;
+                border-color:var.$secondary-color;
+                &:focus-visible{
+                    outline:0;
+                }
+            }
+            .buy{
+                position: absolute;
+                top: 13px;
+                left: 20px;
+                border-right: 2px solid #ddd;
+                padding-right: 10px;
+                display: flex;
+                align-items: center;
+                &>span{
+                    color:grey;
+                    font-size:12px;
+                }
+            }
+            .Search{
+                position: absolute;
+                top: 10px;
+                right: 25px;
+                border-left: 1px solid #ddd;
+                padding-left: 20px;
+                &>span{
+                    color:grey;
+                }
+            }
+        }
+        .slider-status{
+            max-width:900px;
+            margin: 0 auto;
+            margin-top:60px;
+            position: relative;
+          
+            .slider-child{
+                .owl-carousel{
+                    .owl-stage-outer{
+                        .owl-stage{
+                            .owl-item{   
+                                .img{
+                                    width: 100px;
+                                    height: 100px;
+                                    border-radius: 50%;
+                                    &>img{
+                                        width: 100%;
+                                        height: 100%;
+                                        border-radius: 50%;
+                                        object-fit: cover;
+                                        padding: 6px;
+                                    }
+                                }      
+                                .slider-file {
+                                    display: inline-flex;
+                                    align-items: center;
+                                    justify-content: center;
+                                    padding: 10px;
+                                    border-radius: 10px; 
+                                    cursor: pointer;
+                                    margin:20px;
+                                    border-radius: 50%;
+                                    width: 100px;
+                                    height: 100px;
+                                    label {
+                                      font-weight: bold;
+                                      color:gray;
+                                      cursor: pointer;
+                                    }  
+                                    input[type="file"] {
+                                      display: none; 
+                                    }
+                                }
+                                margin:15px;
+                                display: inline-flex;
+                                align-items: center;
+                                justify-content: center;
+                                padding: 10px;
+                                border:4px dashed #3498db; 
+                                border-radius: 10px; 
+                                cursor: pointer;
+                                border-radius: 50%;
+                                width: 100px !important;
+                                height: 100px;   
+                            }
+                        }
+                    }
+                    
+                }
+            }              
+        }
     }
 }
