--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,10 @@
   font-size: 13px !important;
 }
 
+section {
+  margin-top: 20px;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -120,6 +124,7 @@ main .main-section .slider-status {
 }
 main .main-section .slider-status .slider-child .owl-carousel .owl-stage-outer .owl-stage .owl-item {
   margin: 15px;
+  margin: 15px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -162,6 +167,162 @@ main .main-section .slider-status .slider-child .owl-carousel .owl-stage-outer .
 }
 main .main-section .slider-status .slider-child .owl-carousel .owl-stage-outer .owl-stage .owl-item .slider-file input[type=file] {
   display: none;
+}
+main .slider-contents {
+  padding: 0px 35px;
+}
+main .slider-contents > h2 {
+  font-family: "Jost";
+  font-size: 35px;
+  position: relative;
+  font-weight: bold;
+}
+main .slider-contents > h2:after {
+  border: 4px solid #ddd;
+  border-radius: 8px;
+  content: "";
+  width: 100px;
+  position: absolute;
+  top: 57px;
+  height: 0px;
+  left: 0;
+}
+main .slider-contents .slider-props {
+  margin-top: 36px;
+  position: relative;
+}
+main .slider-contents .slider-props .owl-custom {
+  position: relative;
+  margin-top: 60px;
+}
+main .slider-contents .slider-props .owl-custom .owl-nav {
+  display: inline-flex !important;
+  position: absolute;
+  right: 20px;
+  top: -36px;
+}
+main .slider-contents .slider-props .owl-custom .owl-nav .owl-next {
+  width: 30px;
+  position: relative;
+  height: 30px;
+  color: #fff;
+  background-color: #FCA033;
+  border-radius: 50%;
+  margin-right: 0px;
+}
+main .slider-contents .slider-props .owl-custom .owl-nav .owl-next > span {
+  display: none;
+}
+main .slider-contents .slider-props .owl-custom .owl-nav .owl-next::after {
+  content: "\f105";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+}
+main .slider-contents .slider-props .owl-custom .owl-nav .owl-prev {
+  width: 30px;
+  position: relative;
+  height: 30px;
+  color: #fff;
+  background-color: #FCA033;
+  border-radius: 50%;
+  margin-right: 4px;
+}
+main .slider-contents .slider-props .owl-custom .owl-nav .owl-prev > span {
+  display: none;
+}
+main .slider-contents .slider-props .owl-custom .owl-nav .owl-prev::after {
+  content: "\f104";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+}
+main .slider-contents .slider-props .slider-components .slideritems > img {
+  border-radius: 8px;
+}
+main .slider-contents .slider-components {
+  position: relative;
+  border: 1px solid #ddd;
+  padding: 15px;
+  margin: 5px;
+  border-radius: 6px;
+}
+main .slider-contents .slider-components .slideritems .card-contents {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+main .slider-contents .slider-components .slideritems .card-contents .green-success {
+  font-size: 10px;
+  border-radius: 16px;
+  background-color: rgba(126, 198, 126, 0.7882352941);
+  padding: 3px;
+  width: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+main .slider-contents .slider-components .slideritems .card-contents .notify {
+  font-size: 10px;
+  border-radius: 16px;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+main .slider-contents .slider-components .slideritems .card-contents .notify > p {
+  margin: 2px;
+  border-radius: 16px;
+  padding: 3px;
+  background-color: rgba(102, 77, 3, 0.231372549);
+  width: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+}
+main .slider-contents .slider-components .slideritems .profiles {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 10px;
+}
+main .slider-contents .slider-components .slideritems .profiles .icon > i {
+  color: #FCA033;
+}
+main .slider-contents .slider-components .slideritems .profiles .images {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
+main .slider-contents .slider-components .slideritems .profiles .images > img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+main .slider-contents .slider-components .slider-details {
+  margin-top: 15px;
+}
+main .slider-contents .slider-components .slider-details > h4 {
+  font-size: 14px;
+  font-weight: 600;
+  color: #000;
+}
+main .slider-contents .slider-components .slider-details > span {
+  color: #5b5959;
+  font-size: 14px;
+}
+main .slider-contents .slider-components .slider-details > p {
+  color: #5b5959;
+  font-size: 14px;
+}
+main .slider-contents .slider-components .slider-details .price > h5 {
+  color: #FCA033;
 }
 
 /*# sourceMappingURL=style.css.map */
