--- a/assets/sass/_variable.scss
+++ b/assets/sass/_variable.scss
@@ -1,4 +1,8 @@
 $primary-color:#FCA033;
 $secondary-color:#0495FE;
+$color-grey:#ddd;
+$color-green:#7ec67ec9;
 $primary-font:'Public Sans';
 $secondary-font:'Jost';
+$color-black:#000;
+$color-grey:#5b5959;
