--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -324,5 +324,55 @@ main .slider-contents .slider-components .slider-details > p {
 main .slider-contents .slider-components .slider-details .price > h5 {
   color: #FCA033;
 }
+main .theme-section.checkAreas {
+  padding: 0px 35px;
+}
+main .theme-section.checkAreas > h2 {
+  font-family: "Jost";
+  font-size: 35px;
+  position: relative;
+  font-weight: bold;
+  max-width: 600px;
+  line-height: 34px;
+}
+main .theme-section.checkAreas > h2:after {
+  border: 4px solid #ddd;
+  border-radius: 8px;
+  content: "";
+  width: 100px;
+  position: absolute;
+  top: 70px;
+  height: 0px;
+  left: 0;
+}
+main .theme-section.checkAreas .gallery {
+  display: grid;
+  grid-template-columns: 30% 70%;
+  gap: 10px;
+}
+@media screen and (max-width: 767px) {
+  main .theme-section.checkAreas .gallery {
+    grid-template-columns: 100%;
+  }
+}
+main .theme-section.checkAreas .gallery .card-1 {
+  max-width: 500px;
+}
+main .theme-section.checkAreas .gallery .card-1 > img {
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+}
+main .theme-section.checkAreas .gallery .card-2 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 2;
+  gap: 10px;
+}
+main .theme-section.checkAreas .gallery .card-2 .gridcard > img {
+  border-radius: 12px;
+  width: 100%;
+  height: 100%;
+}
 
 /*# sourceMappingURL=style.css.map */
