--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -335,4 +335,57 @@ main{
             }
         }
     }
+    .theme-section{
+        &.checkAreas{
+            padding:0px 35px;
+            &>h2{
+                font-family:var.$secondary-font;
+                font-size:35px;
+                position: relative;
+                font-weight:bold;
+                max-width:600px;
+                line-height:34px;
+                &:after{
+                    border: 4px solid #ddd;
+                    border-radius: 8px;
+                    content: "";
+                    width: 100px;
+                    position: absolute;
+                    top:70px;
+                    height: 0px;
+                    left: 0;
+                }
+            }
+            .gallery{
+                display:grid;
+                grid-template-columns:30% 70%;
+                gap:10px;
+                @media screen and (max-width:767px){
+                    grid-template-columns:100%;
+                }
+                .card-1{
+                    max-width:500px;
+                    &>img{
+                        width:100%;
+                        height:100%;
+                        border-radius:12px;
+                    }
+                }
+                .card-2{
+                    display:grid;
+                    grid-template-columns:repeat(3,1fr);
+                    grid-template-rows:2;
+                    gap:10px;
+                    .gridcard{
+                        &>img{
+                            border-radius:12px;
+                            width:100%;
+                            height:100%;
+                        }
+                    }
+                }
+            }
+        }
+
+    }
 }
