--- a/assets/sass/_variable.scss
+++ b/assets/sass/_variable.scss
@@ -5,4 +5,7 @@ $color-green:#7ec67ec9;
 $primary-font:'Public Sans';
 $secondary-font:'Jost';
 $color-black:#000;
+$color-red:#FC3333;
 $color-grey:#5b5959;
+$color-white:#fff;
+$color-light:#d6c3c330;
