--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,519 +1,18 @@
-@font-face {
-  font-family: "Inter 18pt";
-  src: url("../fonts/inter/Inter18pt-Regular.woff2") format("woff2"), url("../fonts/inter/Inter18pt-Regular.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Public Sans";
-  src: url("../fonts/publicSans/PublicSans-Regular.woff2") format("woff2"), url("../fonts/publicSans/PublicSans-Regular.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Jost";
-  src: url("../fonts/jost/Jost-Black.woff2") format("woff2"), url("../fonts/jost/Jost-Black.woff") format("woff");
-  font-style: normal;
-  font-display: swap;
-}
-.text-small {
-  font-size: 13px !important;
-}
+/* Error: There is no module with the namespace "var".
+ *    ,
+ * 13 |                 font-family:var.$tertiary-font;
+ *    |                             ^^^^^^^^^^^^^^^^^^
+ *    '
+ *   _about.scss 13:29  @use
+ *   style.scss 4:1     root stylesheet */
 
-section {
-  margin-top: 20px;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: There is no module with the namespace "var".\a    \2577 \a 13 \2502                  font-family:var.$tertiary-font;\d\a    \2502                              ^^^^^^^^^^^^^^^^^^\a    \2575 \a   _about.scss 13:29  @use\a   style.scss 4:1     root stylesheet';
 }
-
-* {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: "Public Sans" !important;
-  font-size: 14px;
-  font-weight: normal;
-}
-
-header .topbar {
-  background-color: #FCA033;
-  padding: 10px;
-}
-header .dropdown-menu[data-bs-popper] {
-  right: 0 !important;
-  left: auto;
-}
-header .navbar .logo .navbar-brand > img {
-  width: 130px;
-}
-header .navbar .navbar-nav .nav-item .nav-link.active {
-  color: #0495FE;
-  font-weight: 600;
-}
-
-main .main-section .Headings {
-  padding: 60px;
-  margin: 0 auto;
-  padding-bottom: 17px;
-  text-align: center;
-}
-main .main-section .Headings > h1 {
-  color: grey;
-  font-family: "Jost";
-  text-transform: uppercase;
-  font-weight: 600;
-  line-height: 50px;
-  letter-spacing: 1px;
-}
-main .main-section .Headings > h1 .first {
-  color: #FCA033;
-}
-main .main-section .Headings > h1 .second {
-  color: #0495FE;
-}
-main .main-section .Headings .icon {
-  color: #0495FE;
-  font-size: 25px;
-}
-main .main-section .search-card {
-  max-width: 800px;
-  margin: 0 auto;
-  position: relative;
-}
-main .main-section .search-card .form-control {
-  border-radius: 20px;
-  height: 44px;
-  padding: 0px 67px;
-  font-size: 14px;
-  color: #ddd;
-  border-color: #0495FE;
-}
-main .main-section .search-card .form-control:focus-visible {
-  outline: 0;
-}
-main .main-section .search-card .buy {
-  position: absolute;
-  top: 13px;
-  left: 20px;
-  border-right: 2px solid #ddd;
-  padding-right: 10px;
-  display: flex;
-  align-items: center;
-}
-main .main-section .search-card .buy > span {
-  color: grey;
-  font-size: 12px;
-}
-main .main-section .search-card .Search {
-  position: absolute;
-  top: 10px;
-  right: 25px;
-  border-left: 1px solid #ddd;
-  padding-left: 20px;
-}
-main .main-section .search-card .Search > span {
-  color: grey;
-}
-main .main-section .slider-status {
-  max-width: 900px;
-  margin: 0 auto;
-  margin-top: 60px;
-  position: relative;
-}
-main .main-section .slider-status .slider-child .owl-carousel .owl-stage-outer .owl-stage .owl-item {
-  margin: 15px;
-  margin: 15px;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
-  border: 4px dashed #3498db;
-  border-radius: 10px;
-  cursor: pointer;
-  border-radius: 50%;
-  width: 100px !important;
-  height: 100px;
-}
-main .main-section .slider-status .slider-child .owl-carousel .owl-stage-outer .owl-stage .owl-item .img {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-}
-main .main-section .slider-status .slider-child .owl-carousel .owl-stage-outer .owl-stage .owl-item .img > img {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  object-fit: cover;
-  padding: 6px;
-}
-main .main-section .slider-status .slider-child .owl-carousel .owl-stage-outer .owl-stage .owl-item .slider-file {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
-  border-radius: 10px;
-  cursor: pointer;
-  margin: 20px;
-  border-radius: 50%;
-  width: 100px;
-  height: 100px;
-}
-main .main-section .slider-status .slider-child .owl-carousel .owl-stage-outer .owl-stage .owl-item .slider-file label {
-  font-weight: bold;
-  color: gray;
-  cursor: pointer;
-}
-main .main-section .slider-status .slider-child .owl-carousel .owl-stage-outer .owl-stage .owl-item .slider-file input[type=file] {
-  display: none;
-}
-main .slider-contents {
-  padding: 0px 35px;
-}
-main .slider-contents > h2 {
-  font-family: "Jost";
-  font-size: 35px;
-  position: relative;
-  font-weight: bold;
-}
-main .slider-contents > h2:after {
-  border: 4px solid #ddd;
-  border-radius: 8px;
-  content: "";
-  width: 100px;
-  position: absolute;
-  top: 57px;
-  height: 0px;
-  left: 0;
-}
-main .slider-contents .slider-props {
-  margin-top: 10px;
-  position: relative;
-}
-main .slider-contents .slider-props .owl-custom {
-  position: relative;
-  margin-top: 60px;
-}
-main .slider-contents .slider-props .owl-custom .owl-nav {
-  display: inline-flex !important;
-  position: absolute;
-  right: 20px;
-  top: -36px;
-}
-main .slider-contents .slider-props .owl-custom .owl-nav .owl-next {
-  width: 30px;
-  position: relative;
-  height: 30px;
-  color: #fff;
-  background-color: #FCA033;
-  border-radius: 50%;
-  margin-right: 0px;
-}
-main .slider-contents .slider-props .owl-custom .owl-nav .owl-next > span {
-  display: none;
-}
-main .slider-contents .slider-props .owl-custom .owl-nav .owl-next::after {
-  content: "\f105";
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-}
-main .slider-contents .slider-props .owl-custom .owl-nav .owl-prev {
-  width: 30px;
-  position: relative;
-  height: 30px;
-  color: #fff;
-  background-color: #FCA033;
-  border-radius: 50%;
-  margin-right: 4px;
-}
-main .slider-contents .slider-props .owl-custom .owl-nav .owl-prev > span {
-  display: none;
-}
-main .slider-contents .slider-props .owl-custom .owl-nav .owl-prev::after {
-  content: "\f104";
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-}
-main .slider-contents .slider-props .slider-components .slideritems > img {
-  border-radius: 8px;
-}
-main .slider-contents .slider-components {
-  position: relative;
-  border: 1px solid #ddd;
-  padding: 15px;
-  margin: 5px;
-  border-radius: 6px;
-}
-main .slider-contents .slider-components .slideritems .card-contents {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 15px;
-  position: absolute;
-  top: 0;
-  width: 100%;
-}
-main .slider-contents .slider-components .slideritems .card-contents .green-success {
-  font-size: 10px;
-  border-radius: 16px;
-  background-color: rgba(126, 198, 126, 0.7882352941);
-  padding: 3px;
-  width: 60px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-main .slider-contents .slider-components .slideritems .card-contents .notify {
-  font-size: 10px;
-  border-radius: 16px;
-  padding: 5px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-main .slider-contents .slider-components .slideritems .card-contents .notify > p {
-  margin: 2px;
-  border-radius: 16px;
-  padding: 3px;
-  background-color: rgba(102, 77, 3, 0.231372549);
-  width: 60px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #fff;
-}
-main .slider-contents .slider-components .slideritems .profiles {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  padding: 10px;
-}
-main .slider-contents .slider-components .slideritems .profiles .icon > i {
-  color: #FCA033;
-}
-main .slider-contents .slider-components .slideritems .profiles .images {
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-}
-main .slider-contents .slider-components .slideritems .profiles .images > img {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-}
-main .slider-contents .slider-components .slider-details {
-  margin-top: 15px;
-}
-main .slider-contents .slider-components .slider-details > h4 {
-  font-size: 14px;
-  font-weight: 600;
-  color: #000;
-}
-main .slider-contents .slider-components .slider-details > span {
-  color: #5b5959;
-  font-size: 14px;
-}
-main .slider-contents .slider-components .slider-details > p {
-  color: #5b5959;
-  font-size: 14px;
-}
-main .slider-contents .slider-components .slider-details .price > h5 {
-  color: #FCA033;
-}
-main .slider-contents.video-contents .slider-components {
-  border: 0;
-}
-main .slider-contents.video-contents .slider-components .slideritems .card-contents {
-  height: 100%;
-}
-main .slider-contents.video-contents .slider-components .slideritems .card-contents .contents {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-}
-main .slider-contents.video-contents .slider-components .slideritems .card-contents .contents .green-success {
-  background-color: transparent;
-  cursor: pointer;
-}
-main .slider-contents.video-contents .slider-components .slideritems .card-contents .contents .green-success > i {
-  font-size: 30px;
-  color: #FC3333;
-}
-main .slider-contents.GetINTOUCh {
-  padding-bottom: 50px;
-}
-main .slider-contents.GetINTOUCh .GetIn-status {
-  background-color: rgba(214, 195, 195, 0.1882352941);
-  padding: 60px;
-  margin-top: 12px;
-}
-main .slider-contents.GetINTOUCh .GetIn-status > p {
-  margin-bottom: 0px;
-  font-size: 20px;
-}
-main .slider-contents.GetINTOUCh .GetIn-status > h3 {
-  font-size: 20px;
-  font-weight: 600;
-}
-main .slider-contents.GetINTOUCh .GetIn-status .supportTeam {
-  margin-top: 5px;
-}
-main .slider-contents.GetINTOUCh .GetIn-status .supportTeam > span {
-  font-size: 13px;
-}
-main .slider-contents.GetINTOUCh .GetIn-status .supportTeam .service .option {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-main .slider-contents.GetINTOUCh .GetIn-status .supportTeam .service {
-  margin-top: 30px;
-  padding-left: 30px;
-  padding-right: 30px;
-}
-main .slider-contents.GetINTOUCh .GetIn-status .supportTeam .service .options {
-  display: flex;
-  align-items: center;
-  margin-bottom: 20px;
-}
-main .slider-contents.GetINTOUCh .GetIn-status .supportTeam .service .options .icon > span {
-  font-size: 20px;
-}
-main .slider-contents.GetINTOUCh .GetIn-status .supportTeam .service .options .details {
-  margin-left: 20px;
-  font-size: 14px;
-}
-main .slider-contents.GetINTOUCh .GetIn-status .supportTeam .service .options .details > p {
-  margin-bottom: 0;
-}
-main .slider-contents.GetINTOUCh .iframes {
-  margin-top: 12px;
-}
-main .theme-section.checkAreas {
-  padding: 0px 35px;
-}
-main .theme-section.checkAreas > h2 {
-  font-family: "Jost";
-  font-size: 35px;
-  position: relative;
-  font-weight: bold;
-  max-width: 600px;
-  line-height: 34px;
-}
-main .theme-section.checkAreas > h2:after {
-  border: 4px solid #ddd;
-  border-radius: 8px;
-  content: "";
-  width: 100px;
-  position: absolute;
-  top: 70px;
-  height: 0px;
-  left: 0;
-}
-main .theme-section.checkAreas .gallery {
-  display: grid;
-  grid-template-columns: 30% 70%;
-  gap: 10px;
-}
-@media screen and (max-width: 767px) {
-  main .theme-section.checkAreas .gallery {
-    grid-template-columns: 100%;
-  }
-}
-main .theme-section.checkAreas .gallery .card-1 {
-  max-width: 500px;
-}
-main .theme-section.checkAreas .gallery .card-1 > img {
-  width: 100%;
-  height: 100%;
-  border-radius: 12px;
-}
-main .theme-section.checkAreas .gallery .card-2 {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 2;
-  gap: 10px;
-}
-main .theme-section.checkAreas .gallery .card-2 .gridcard > img {
-  border-radius: 12px;
-  width: 100%;
-  height: 100%;
-}
-main .sellbanner {
-  background-image: url("../Images/home-banner-2.jpg");
-  width: 100%;
-  height: 400px;
-  background-position: center;
-  object-fit: cover;
-  padding: 100px;
-  position: relative;
-}
-main .sellbanner:after {
-  background-color: #000000;
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  right: 0;
-  left: 0;
-  opacity: 0.4;
-}
-main .sellbanner .sell-options h2 {
-  color: #fff;
-  font-size: 30px;
-  font-weight: 600;
-  z-index: 1;
-  position: relative;
-}
-main .sellbanner .sell-options p {
-  margin-top: 15px;
-  color: #fff;
-  font-weight: 600;
-  max-width: 600px;
-  z-index: 1;
-  position: relative;
-}
-main .sellbanner .valueoffIt .btn-border {
-  border: 1px solid #fff;
-  border-radius: 8px;
-  max-width: 200px;
-  color: #fff;
-  z-index: 1;
-  padding: 12px;
-  cursor: pointer;
-  position: relative;
-}
-
-footer {
-  background-color: #222222;
-  padding: 20px;
-}
-footer .social-media {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-footer .social-media > span {
-  color: #fff;
-  font-size: 20px;
-  cursor: pointer;
-  margin: 9px;
-}
-footer .bottom-footer {
-  padding: 15px 0px;
-  border-top: 1px solid rgba(214, 195, 195, 0.1882352941);
-}
-footer .bottom-footer > h2 {
-  color: rgba(214, 195, 195, 0.1882352941);
-  text-align: center;
-  font-size: 15px;
-}
-
-/*# sourceMappingURL=style.css.map */
